--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 bcrypt==4.0.1
-lxml==4.9.3
-numpy==1.24.4
-opencv-python==4.8.0.74
-packaging==23.1
-Pillow==10.0.0
-pyperclip==1.8.2
-pytesseract==0.3.10
-python-docx==0.8.11
+exceptiongroup==1.1.3
+iniconfig==2.0.0
+packaging==23.2
+pluggy==1.3.0
+pytest==7.4.3
+tomli==2.0.1
